// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services data All service summary for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "service_summary": Object {
          "id": "114",
          "service_channels_summary": Array [
            Object {
              "channel_id": "other_application_count",
              "channel_value": 101,
              "subject_id": "114",
              "year": "2018",
            },
            Object {
              "channel_id": "phone_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2018",
            },
            Object {
              "channel_id": "live_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2018",
            },
            Object {
              "channel_id": "mail_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2018",
            },
            Object {
              "channel_id": "online_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2018",
            },
            Object {
              "channel_id": "other_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2019",
            },
            Object {
              "channel_id": "phone_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2019",
            },
            Object {
              "channel_id": "live_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2019",
            },
            Object {
              "channel_id": "mail_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2019",
            },
            Object {
              "channel_id": "online_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2019",
            },
          ],
          "service_digital_status_summary": Array [
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "issue_res_digital",
              "key_desc": "issue_res_digital_desc",
              "not_applicable": 0,
              "subject_id": "114",
            },
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "issuance_digital",
              "key_desc": "issuance_digital_desc",
              "not_applicable": 0,
              "subject_id": "114",
            },
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "decision_digital",
              "key_desc": "decision_digital_desc",
              "not_applicable": 0,
              "subject_id": "114",
            },
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "application_digital",
              "key_desc": "application_digital_desc",
              "not_applicable": 0,
              "subject_id": "114",
            },
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "authentication",
              "key_desc": "authentication_desc",
              "not_applicable": 0,
              "subject_id": "114",
            },
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "account_reg_digital",
              "key_desc": "account_reg_digital_desc",
              "not_applicable": 0,
              "subject_id": "114",
            },
          ],
          "service_general_stats": Object {
            "num_of_programs_offering_services": 1,
            "num_of_subject_offering_services": null,
            "number_of_online_enabled_services": 0,
            "number_of_services": 2,
            "report_years": Array [
              "2019",
              "2018",
            ],
          },
          "service_standards_summary": Array [
            Object {
              "met_standards_count": null,
              "services_w_standards_count": 1,
              "standards_count": 1,
              "subject_id": "114",
            },
          ],
          "subject_offering_services_summary": Array [
            Object {
              "number_of_services": 2,
              "subject_id": "CB-BEZ01",
              "total_volume": 0,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`services data All service summary for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": Object {
        "service_summary": Object {
          "id": "CB-BEZ01",
          "service_channels_summary": Array [
            Object {
              "channel_id": "other_application_count",
              "channel_value": 101,
              "subject_id": "114",
              "year": "2018",
            },
            Object {
              "channel_id": "phone_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2018",
            },
            Object {
              "channel_id": "live_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2018",
            },
            Object {
              "channel_id": "mail_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2018",
            },
            Object {
              "channel_id": "online_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2018",
            },
            Object {
              "channel_id": "other_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2019",
            },
            Object {
              "channel_id": "phone_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2019",
            },
            Object {
              "channel_id": "live_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2019",
            },
            Object {
              "channel_id": "mail_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2019",
            },
            Object {
              "channel_id": "online_application_count",
              "channel_value": 0,
              "subject_id": "114",
              "year": "2019",
            },
          ],
          "service_digital_status_summary": Array [
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "issue_res_digital",
              "key_desc": "issue_res_digital_desc",
              "not_applicable": 0,
              "subject_id": "CB-BEZ01",
            },
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "issuance_digital",
              "key_desc": "issuance_digital_desc",
              "not_applicable": 0,
              "subject_id": "CB-BEZ01",
            },
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "decision_digital",
              "key_desc": "decision_digital_desc",
              "not_applicable": 0,
              "subject_id": "CB-BEZ01",
            },
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "application_digital",
              "key_desc": "application_digital_desc",
              "not_applicable": 0,
              "subject_id": "CB-BEZ01",
            },
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "authentication",
              "key_desc": "authentication_desc",
              "not_applicable": 0,
              "subject_id": "CB-BEZ01",
            },
            Object {
              "can_online": 0,
              "cannot_online": 2,
              "key": "account_reg_digital",
              "key_desc": "account_reg_digital_desc",
              "not_applicable": 0,
              "subject_id": "CB-BEZ01",
            },
          ],
          "service_general_stats": Object {
            "num_of_programs_offering_services": null,
            "num_of_subject_offering_services": null,
            "number_of_online_enabled_services": 0,
            "number_of_services": 2,
            "report_years": Array [
              "2019",
              "2018",
            ],
          },
          "service_standards_summary": Array [
            Object {
              "met_standards_count": null,
              "services_w_standards_count": 1,
              "standards_count": 1,
              "subject_id": "CB-BEZ01",
            },
          ],
          "subject_offering_services_summary": null,
        },
      },
    },
  },
}
`;

exports[`services data All services and standards for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "services": Array [
          Object {
            "accessibility_assessors": Array [
              "",
            ],
            "account_reg_digital_status": false,
            "application_digital_status": false,
            "authentication_status": false,
            "collects_fees": false,
            "decision_digital_status": false,
            "description": "The Copyright Board of Canada is an economic regulatory body empowered to establish, at the request of an interested party, the royalties to be paid for the use of copyrighted subject-matter, when the administration of such copyright is entrusted to a collective society.",
            "designations": Array [
              "None",
            ],
            "digital_enablement_comment": null,
            "digital_identity_platforms": Array [
              "",
            ],
            "feedback_channels": Array [
              "Email",
              "Postal Mail",
              "Telephone",
            ],
            "first_active_year": "2018",
            "id": "1119",
            "is_active": true,
            "issuance_digital_status": false,
            "issue_res_digital_status": false,
            "last_accessibility_review": null,
            "last_active_year": null,
            "last_gender_analysis": null,
            "last_improve_from_feedback": null,
            "name": "Copyright Tariff Setting",
            "org": Object {
              "name": "Copyright Board Canada",
            },
            "org_id": "114",
            "program_activity_codes": Array [
              "CB-BEZ01",
            ],
            "programs": Array [
              Object {
                "name": "Copyright Tariff Setting and Issuance of Licences",
              },
            ],
            "recipient_type": Array [
              "",
            ],
            "report_years": Array [
              "2019",
              "2018",
            ],
            "scope": Array [
              "External Service",
            ],
            "service_report": Array [
              Object {
                "cra_business_ids_collected": false,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": 0,
                "mail_application_count": 0,
                "online_application_count": 0,
                "online_inquiry_count": 8862,
                "other_application_count": 70,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": null,
                "phone_inquiry_count": null,
                "service_id": "1119",
                "service_report_comment": "The number of telephone enquiries is not tracked due to the very low volume of enquiries received every year.",
                "sin_collected": null,
                "year": "2018",
              },
              Object {
                "cra_business_ids_collected": null,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": null,
                "mail_application_count": null,
                "online_application_count": null,
                "online_inquiry_count": null,
                "other_application_count": null,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": null,
                "phone_inquiry_count": null,
                "service_id": "1119",
                "service_report_comment": null,
                "sin_collected": null,
                "year": "2019",
              },
            ],
            "service_type": Array [
              "Legal",
            ],
            "standards": Array [],
            "subject_type": "service",
            "submission_year": "2019",
            "target_groups": Array [
              "Economic Segments",
            ],
            "urls": Array [
              "https://cb-cda.gc.ca/tariffs-tarifs/index-e.html",
            ],
          },
          Object {
            "accessibility_assessors": Array [
              "",
            ],
            "account_reg_digital_status": false,
            "application_digital_status": false,
            "authentication_status": false,
            "collects_fees": false,
            "decision_digital_status": false,
            "description": "The Copyright Board of Canada issues non-exclusive licences authorizing the use of published copyrighted works when the copyright owner cannot be located, and outlines the terms under which the works can be used.",
            "designations": Array [
              "None",
            ],
            "digital_enablement_comment": null,
            "digital_identity_platforms": Array [
              "",
            ],
            "feedback_channels": Array [
              "Email",
              "Postal Mail",
              "Telephone",
            ],
            "first_active_year": "2018",
            "id": "1120",
            "is_active": true,
            "issuance_digital_status": false,
            "issue_res_digital_status": false,
            "last_accessibility_review": null,
            "last_active_year": null,
            "last_gender_analysis": null,
            "last_improve_from_feedback": null,
            "name": "Issuance of licences for the use of copyright works when the owner is unlocatable",
            "org": Object {
              "name": "Copyright Board Canada",
            },
            "org_id": "114",
            "program_activity_codes": Array [
              "CB-BEZ01",
            ],
            "programs": Array [
              Object {
                "name": "Copyright Tariff Setting and Issuance of Licences",
              },
            ],
            "recipient_type": Array [
              "",
            ],
            "report_years": Array [
              "2019",
              "2018",
            ],
            "scope": Array [
              "External Service",
            ],
            "service_report": Array [
              Object {
                "cra_business_ids_collected": false,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": 0,
                "mail_application_count": 0,
                "online_application_count": 0,
                "online_inquiry_count": 511,
                "other_application_count": 31,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": null,
                "phone_inquiry_count": null,
                "service_id": "1120",
                "service_report_comment": "The number of telephone enquiries is not tracked due to the very low volume of enquiries received every year.",
                "sin_collected": null,
                "year": "2018",
              },
              Object {
                "cra_business_ids_collected": null,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": null,
                "mail_application_count": null,
                "online_application_count": null,
                "online_inquiry_count": null,
                "other_application_count": null,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": null,
                "phone_inquiry_count": null,
                "service_id": "1120",
                "service_report_comment": null,
                "sin_collected": null,
                "year": "2019",
              },
            ],
            "service_type": Array [
              "Legal",
            ],
            "standards": Array [
              Object {
                "channel": "Other",
                "first_active_year": "2018",
                "last_active_year": null,
                "last_gcss_tool_year": null,
                "name": "Licences are issued within 45 days once the file is considered complete",
                "other_type_comment": "By email",
                "rtp_urls": Array [],
                "service_id": "1120",
                "standard_id": "1073",
                "standard_report": Array [
                  Object {
                    "count": 4,
                    "is_target_met": false,
                    "lower": 70,
                    "met_count": 2,
                    "standard_id": "1073",
                    "standard_report_comment": "For 2018-2019: 31 applications were filed, 4 licences were issued and 7 applications were denied. Other includes copyright owners found, files on hold and requests abandoned. 
1073,2019,,100.00,,,,,",
                    "upper": 100,
                    "year": "2018",
                  },
                ],
                "standard_urls": Array [],
                "submission_year": "2018",
                "target_type": null,
                "type": "Timeliness",
              },
              Object {
                "channel": "Email",
                "first_active_year": "2018",
                "last_active_year": null,
                "last_gcss_tool_year": null,
                "name": "Licences are issued within 45 days once the file is considered complete",
                "other_type_comment": null,
                "rtp_urls": Array [],
                "service_id": "1120",
                "standard_id": "1073",
                "standard_report": Array [
                  Object {
                    "count": 4,
                    "is_target_met": false,
                    "lower": 70,
                    "met_count": 2,
                    "standard_id": "1073",
                    "standard_report_comment": "For 2018-2019: 31 applications were filed, 4 licences were issued and 7 applications were denied. Other includes copyright owners found, files on hold and requests abandoned. 
1073,2019,,100.00,,,,,",
                    "upper": 100,
                    "year": "2018",
                  },
                ],
                "standard_urls": Array [],
                "submission_year": "2019",
                "target_type": null,
                "type": "Timeliness",
              },
            ],
            "subject_type": "service",
            "submission_year": "2019",
            "target_groups": Array [
              "Persons",
            ],
            "urls": Array [
              "https://cb-cda.gc.ca/unlocatable-introuvables/brochure2-e.html",
            ],
          },
        ],
      },
    },
  },
}
`;

exports[`services data All services and standards for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": Object {
        "services": Array [
          Object {
            "accessibility_assessors": Array [
              "",
            ],
            "account_reg_digital_status": false,
            "application_digital_status": false,
            "authentication_status": false,
            "collects_fees": false,
            "decision_digital_status": false,
            "description": "The Copyright Board of Canada is an economic regulatory body empowered to establish, at the request of an interested party, the royalties to be paid for the use of copyrighted subject-matter, when the administration of such copyright is entrusted to a collective society.",
            "designations": Array [
              "None",
            ],
            "digital_enablement_comment": null,
            "digital_identity_platforms": Array [
              "",
            ],
            "feedback_channels": Array [
              "Email",
              "Postal Mail",
              "Telephone",
            ],
            "first_active_year": "2018",
            "id": "1119",
            "is_active": true,
            "issuance_digital_status": false,
            "issue_res_digital_status": false,
            "last_accessibility_review": null,
            "last_active_year": null,
            "last_gender_analysis": null,
            "last_improve_from_feedback": null,
            "name": "Copyright Tariff Setting",
            "org": Object {
              "name": "Copyright Board Canada",
            },
            "org_id": "114",
            "program_activity_codes": Array [
              "CB-BEZ01",
            ],
            "programs": Array [
              Object {
                "name": "Copyright Tariff Setting and Issuance of Licences",
              },
            ],
            "recipient_type": Array [
              "",
            ],
            "report_years": Array [
              "2019",
              "2018",
            ],
            "scope": Array [
              "External Service",
            ],
            "service_report": Array [
              Object {
                "cra_business_ids_collected": false,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": 0,
                "mail_application_count": 0,
                "online_application_count": 0,
                "online_inquiry_count": 8862,
                "other_application_count": 70,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": null,
                "phone_inquiry_count": null,
                "service_id": "1119",
                "service_report_comment": "The number of telephone enquiries is not tracked due to the very low volume of enquiries received every year.",
                "sin_collected": null,
                "year": "2018",
              },
              Object {
                "cra_business_ids_collected": null,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": null,
                "mail_application_count": null,
                "online_application_count": null,
                "online_inquiry_count": null,
                "other_application_count": null,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": null,
                "phone_inquiry_count": null,
                "service_id": "1119",
                "service_report_comment": null,
                "sin_collected": null,
                "year": "2019",
              },
            ],
            "service_type": Array [
              "Legal",
            ],
            "standards": Array [],
            "subject_type": "service",
            "submission_year": "2019",
            "target_groups": Array [
              "Economic Segments",
            ],
            "urls": Array [
              "https://cb-cda.gc.ca/tariffs-tarifs/index-e.html",
            ],
          },
          Object {
            "accessibility_assessors": Array [
              "",
            ],
            "account_reg_digital_status": false,
            "application_digital_status": false,
            "authentication_status": false,
            "collects_fees": false,
            "decision_digital_status": false,
            "description": "The Copyright Board of Canada issues non-exclusive licences authorizing the use of published copyrighted works when the copyright owner cannot be located, and outlines the terms under which the works can be used.",
            "designations": Array [
              "None",
            ],
            "digital_enablement_comment": null,
            "digital_identity_platforms": Array [
              "",
            ],
            "feedback_channels": Array [
              "Email",
              "Postal Mail",
              "Telephone",
            ],
            "first_active_year": "2018",
            "id": "1120",
            "is_active": true,
            "issuance_digital_status": false,
            "issue_res_digital_status": false,
            "last_accessibility_review": null,
            "last_active_year": null,
            "last_gender_analysis": null,
            "last_improve_from_feedback": null,
            "name": "Issuance of licences for the use of copyright works when the owner is unlocatable",
            "org": Object {
              "name": "Copyright Board Canada",
            },
            "org_id": "114",
            "program_activity_codes": Array [
              "CB-BEZ01",
            ],
            "programs": Array [
              Object {
                "name": "Copyright Tariff Setting and Issuance of Licences",
              },
            ],
            "recipient_type": Array [
              "",
            ],
            "report_years": Array [
              "2019",
              "2018",
            ],
            "scope": Array [
              "External Service",
            ],
            "service_report": Array [
              Object {
                "cra_business_ids_collected": false,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": 0,
                "mail_application_count": 0,
                "online_application_count": 0,
                "online_inquiry_count": 511,
                "other_application_count": 31,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": null,
                "phone_inquiry_count": null,
                "service_id": "1120",
                "service_report_comment": "The number of telephone enquiries is not tracked due to the very low volume of enquiries received every year.",
                "sin_collected": null,
                "year": "2018",
              },
              Object {
                "cra_business_ids_collected": null,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": null,
                "mail_application_count": null,
                "online_application_count": null,
                "online_inquiry_count": null,
                "other_application_count": null,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": null,
                "phone_inquiry_count": null,
                "service_id": "1120",
                "service_report_comment": null,
                "sin_collected": null,
                "year": "2019",
              },
            ],
            "service_type": Array [
              "Legal",
            ],
            "standards": Array [
              Object {
                "channel": "Other",
                "first_active_year": "2018",
                "last_active_year": null,
                "last_gcss_tool_year": null,
                "name": "Licences are issued within 45 days once the file is considered complete",
                "other_type_comment": "By email",
                "rtp_urls": Array [],
                "service_id": "1120",
                "standard_id": "1073",
                "standard_report": Array [
                  Object {
                    "count": 4,
                    "is_target_met": false,
                    "lower": 70,
                    "met_count": 2,
                    "standard_id": "1073",
                    "standard_report_comment": "For 2018-2019: 31 applications were filed, 4 licences were issued and 7 applications were denied. Other includes copyright owners found, files on hold and requests abandoned. 
1073,2019,,100.00,,,,,",
                    "upper": 100,
                    "year": "2018",
                  },
                ],
                "standard_urls": Array [],
                "submission_year": "2018",
                "target_type": null,
                "type": "Timeliness",
              },
              Object {
                "channel": "Email",
                "first_active_year": "2018",
                "last_active_year": null,
                "last_gcss_tool_year": null,
                "name": "Licences are issued within 45 days once the file is considered complete",
                "other_type_comment": null,
                "rtp_urls": Array [],
                "service_id": "1120",
                "standard_id": "1073",
                "standard_report": Array [
                  Object {
                    "count": 4,
                    "is_target_met": false,
                    "lower": 70,
                    "met_count": 2,
                    "standard_id": "1073",
                    "standard_report_comment": "For 2018-2019: 31 applications were filed, 4 licences were issued and 7 applications were denied. Other includes copyright owners found, files on hold and requests abandoned. 
1073,2019,,100.00,,,,,",
                    "upper": 100,
                    "year": "2018",
                  },
                ],
                "standard_urls": Array [],
                "submission_year": "2019",
                "target_type": null,
                "type": "Timeliness",
              },
            ],
            "subject_type": "service",
            "submission_year": "2019",
            "target_groups": Array [
              "Persons",
            ],
            "urls": Array [
              "https://cb-cda.gc.ca/unlocatable-introuvables/brochure2-e.html",
            ],
          },
        ],
      },
    },
  },
}
`;

exports[`services data Searching services by name 1`] = `
Array [
  Object {
    "data": Object {
      "en_root": Object {
        "search_by_english_word": Array [
          Object {
            "id": "1119",
            "name": "Copyright Tariff Setting",
          },
          Object {
            "id": "1120",
            "name": "Issuance of licences for the use of copyright works when the owner is unlocatable",
          },
        ],
        "search_by_french_word": Array [],
      },
    },
  },
  Object {
    "data": Object {
      "fr_root": Object {
        "diacritical_free_search": Array [
          Object {
            "id": "1119",
            "name": "Établissement de tarifs liés au droit d’auteur",
          },
        ],
        "diacritical_search": Array [
          Object {
            "id": "1119",
            "name": "Établissement de tarifs liés au droit d’auteur",
          },
        ],
        "multi_word_search": Array [
          Object {
            "id": "1119",
            "name": "Établissement de tarifs liés au droit d’auteur",
          },
        ],
        "partial_word_search": Array [
          Object {
            "id": "1119",
            "name": "Établissement de tarifs liés au droit d’auteur",
          },
          Object {
            "id": "1120",
            "name": "Délivrance de licences pour les oeuvres protégées par un droit d'auteur lorsque le titulaire est introuvable",
          },
        ],
      },
    },
  },
]
`;

exports[`services data Single service 1`] = `
Object {
  "data": Object {
    "root": Object {
      "service": Object {
        "accessibility_assessors": Array [
          "",
        ],
        "account_reg_digital_status": false,
        "application_digital_status": false,
        "authentication_status": false,
        "collects_fees": false,
        "decision_digital_status": false,
        "description": "The Copyright Board of Canada issues non-exclusive licences authorizing the use of published copyrighted works when the copyright owner cannot be located, and outlines the terms under which the works can be used.",
        "designations": Array [
          "None",
        ],
        "digital_enablement_comment": null,
        "digital_identity_platforms": Array [
          "",
        ],
        "feedback_channels": Array [
          "Email",
          "Postal Mail",
          "Telephone",
        ],
        "first_active_year": "2018",
        "id": "1120",
        "is_active": true,
        "issuance_digital_status": false,
        "issue_res_digital_status": false,
        "last_accessibility_review": null,
        "last_active_year": null,
        "last_gender_analysis": null,
        "last_improve_from_feedback": null,
        "name": "Issuance of licences for the use of copyright works when the owner is unlocatable",
        "org": Object {
          "name": "Copyright Board Canada",
        },
        "org_id": "114",
        "program_activity_codes": Array [
          "CB-BEZ01",
        ],
        "programs": Array [
          Object {
            "name": "Copyright Tariff Setting and Issuance of Licences",
          },
        ],
        "recipient_type": Array [
          "",
        ],
        "report_years": Array [
          "2019",
          "2018",
        ],
        "scope": Array [
          "External Service",
        ],
        "service_report": Array [
          Object {
            "cra_business_ids_collected": false,
            "email_application_count": null,
            "fax_application_count": null,
            "live_application_count": 0,
            "mail_application_count": 0,
            "online_application_count": 0,
            "online_inquiry_count": 511,
            "other_application_count": 31,
            "phone_application_count": null,
            "phone_inquiry_and_application_count": null,
            "phone_inquiry_count": null,
            "service_id": "1120",
            "service_report_comment": "The number of telephone enquiries is not tracked due to the very low volume of enquiries received every year.",
            "sin_collected": null,
            "year": "2018",
          },
          Object {
            "cra_business_ids_collected": null,
            "email_application_count": null,
            "fax_application_count": null,
            "live_application_count": null,
            "mail_application_count": null,
            "online_application_count": null,
            "online_inquiry_count": null,
            "other_application_count": null,
            "phone_application_count": null,
            "phone_inquiry_and_application_count": null,
            "phone_inquiry_count": null,
            "service_id": "1120",
            "service_report_comment": null,
            "sin_collected": null,
            "year": "2019",
          },
        ],
        "service_type": Array [
          "Legal",
        ],
        "standards": Array [
          Object {
            "channel": "Other",
            "first_active_year": "2018",
            "last_active_year": null,
            "last_gcss_tool_year": null,
            "name": "Licences are issued within 45 days once the file is considered complete",
            "other_type_comment": "By email",
            "rtp_urls": Array [],
            "service_id": "1120",
            "standard_id": "1073",
            "standard_report": Array [
              Object {
                "count": 4,
                "is_target_met": false,
                "lower": 70,
                "met_count": 2,
                "standard_id": "1073",
                "standard_report_comment": "For 2018-2019: 31 applications were filed, 4 licences were issued and 7 applications were denied. Other includes copyright owners found, files on hold and requests abandoned. 
1073,2019,,100.00,,,,,",
                "upper": 100,
                "year": "2018",
              },
            ],
            "standard_urls": Array [],
            "submission_year": "2018",
            "target_type": null,
            "type": "Timeliness",
          },
          Object {
            "channel": "Email",
            "first_active_year": "2018",
            "last_active_year": null,
            "last_gcss_tool_year": null,
            "name": "Licences are issued within 45 days once the file is considered complete",
            "other_type_comment": null,
            "rtp_urls": Array [],
            "service_id": "1120",
            "standard_id": "1073",
            "standard_report": Array [
              Object {
                "count": 4,
                "is_target_met": false,
                "lower": 70,
                "met_count": 2,
                "standard_id": "1073",
                "standard_report_comment": "For 2018-2019: 31 applications were filed, 4 licences were issued and 7 applications were denied. Other includes copyright owners found, files on hold and requests abandoned. 
1073,2019,,100.00,,,,,",
                "upper": 100,
                "year": "2018",
              },
            ],
            "standard_urls": Array [],
            "submission_year": "2019",
            "target_type": null,
            "type": "Timeliness",
          },
        ],
        "subject_type": "service",
        "submission_year": "2019",
        "target_groups": Array [
          "Persons",
        ],
        "urls": Array [
          "https://cb-cda.gc.ca/unlocatable-introuvables/brochure2-e.html",
        ],
      },
    },
  },
}
`;
